--- a/index.html
+++ b/index.html
@@ -661,6 +661,7 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
     <script>
         document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
             const nav = document.querySelector('.main-nav ul');
@@ -668,4 +669,5 @@
         });
     </script>
 </body>
+
 </html>
